资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2/32bit/MT_API.h

MT_API INT32 __stdcall MT_Set_Stream_Circle_V_Start(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Circle_R_CW_Run_Rel(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Stream_Circle_R_CW_Run_Abs(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Stream_Circle_R_CCW_Run_Rel(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Stream_Circle_R_CCW_Run_Abs(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Stream_Circle_Stop(WORD AObj);
MT_API INT32 __stdcall MT_Set_Stream_Circle_Halt(WORD AObj);
MT_API INT32 __stdcall MT_Set_Stream_Wait_Line(WORD AObj);
MT_API INT32 __stdcall MT_Set_Stream_Wait_Circle(WORD AObj);
MT_API INT32 __stdcall MT_Set_Stream_OC_Out_Single(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_OC_Out_All(INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Optic_Out_Single(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Optic_Out_All(INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Wait_Optic_In(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Stream_Run_Check(void);
MT_API INT32 __stdcall MT_Set_Stream_Dec_Enable(void);
MT_API INT32 __stdcall MT_Set_Stream_Dec_Disable(void);
MT_API INT32 __stdcall MT_Get_Encoder_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Encoder_Pos(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Encoder_Pos(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Encoder_Z_Polarity(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Encoder_Dir_Polarity(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Get_Encoder_Index_Line_Count(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_Encoder_Over_Enable(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Encoder_Over_Max(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Encoder_Over_Stable(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Help_Step_Line_Real_To_Steps(double AStepAngle,INT32 ADiv,double APitch,double ALineRatio,double AValue);
MT_API INT32 __stdcall MT_Help_Step_Circle_Real_To_Steps(double AStepAngle,INT32 ADiv,double ACircleRatio,double AValue);
MT_API double __stdcall MT_Help_Step_Line_Steps_To_Real(double AStepAngle,INT32 ADiv,double APitch,double ALineRatio,INT32 AValue);
MT_API double __stdcall MT_Help_Step_Circle_Steps_To_Real(double AStepAngle,INT32 ADiv,double ACircleRatio,INT32 AValue);
MT_API INT32 __stdcall MT_Help_Encoder_Line_Real_To_Steps(double APitch,double ALineRatio,INT32 ALineCount,double AValue);
MT_API INT32 __stdcall MT_Help_Encoder_Circle_Real_To_Steps(double ACircleRatio,INT32 ALineCount,double AValue);
MT_API double __stdcall MT_Help_Encoder_Line_Steps_To_Real(double APitch,double ALineRatio,INT32 ALineCount,INT32 AValue);
MT_API double __stdcall MT_Help_Encoder_Circle_Steps_To_Real(double ACircleRatio,INT32 ALineCount,INT32 AValue);
MT_API INT32 __stdcall MT_Help_Grating_Line_Real_To_Steps(double AUnit_um,double AValue);
MT_API INT32 __stdcall MT_Help_Grating_Circle_Real_To_Steps(INT32 ALineCount,double AValue);
MT_API double __stdcall MT_Help_Grating_Line_Steps_To_Real(double AUnit_um,INT32 AValue);
MT_API double __stdcall MT_Help_Grating_Circle_Steps_To_Real(INT32 ALineCount,INT32 AValue);
MT_API float __stdcall MT_Help_Encoder_Factor(double AStepAngle,INT32 ADiv,INT32 ALineCount);
MT_API float __stdcall MT_Help_Grating_Line_Factor(double AStepAngle,INT32 ADiv,double APitch,double ALineRatio,double AUnit_um);
MT_API float __stdcall MT_Help_Grating_Circle_Factor(double AStepAngle,INT32 ADiv,double ACircleRatio,INT32 ALineCount);