资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2_Multi/32bit/MT_API.bas


Declare Function MT_Set_Stream_Circle_V_Start Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Circle_R_CW_Run_Rel Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AR As Long,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Stream_Circle_R_CW_Run_Abs Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AR As Long,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Stream_Circle_R_CCW_Run_Rel Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AR As Long,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Stream_Circle_R_CCW_Run_Abs Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AR As Long,ByVal Axis_Target0 As Long,ByVal Axis_Target1 As Long) As Long

Declare Function MT_Set_Stream_Circle_Stop Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_Circle_Halt Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_Wait_Line Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_Wait_Circle Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Stream_OC_Out_Single Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_OC_Out_All Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Optic_Out_Single Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Optic_Out_All Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Wait_Optic_In Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Stream_Run_Check Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Set_Stream_Dec_Enable Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Set_Stream_Dec_Disable Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Get_Encoder_Num Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_Encoder_Pos Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Encoder_Pos Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Encoder_Z_Polarity Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Encoder_Dir_Polarity Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Get_Encoder_Index_Line_Count Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Encoder_Over_Enable Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Encoder_Over_Max Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Encoder_Over_Stable Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Help_Step_Line_Real_To_Steps Lib "MT_API_Multi.dll" (ByVal AStepAngle As Double,ByVal ADiv As Long,ByVal APitch As Double,ByVal ALineRatio As Double,ByVal AValue As Double) As Long

Declare Function MT_Help_Step_Circle_Real_To_Steps Lib "MT_API_Multi.dll" (ByVal AStepAngle As Double,ByVal ADiv As Long,ByVal ACircleRatio As Double,ByVal AValue As Double) As Long

Declare Function MT_Help_Step_Line_Steps_To_Real Lib "MT_API_Multi.dll" (ByVal AStepAngle As Double,ByVal ADiv As Long,ByVal APitch As Double,ByVal ALineRatio As Double,ByVal AValue As Long) As Double

Declare Function MT_Help_Step_Circle_Steps_To_Real Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AStepAngle As Double,ByVal ADiv As Long,ByVal ACircleRatio As Double,ByVal AValue As Long) As Double

Declare Function MT_Help_Encoder_Line_Real_To_Steps Lib "MT_API_Multi.dll" (ByVal APitch As Double,ByVal ALineRatio As Double,ByVal ALineCount As Long,ByVal AValue As Double) As Long

Declare Function MT_Help_Encoder_Circle_Real_To_Steps Lib "MT_API_Multi.dll" (ByVal ACircleRatio As Double,ByVal ALineCount As Long,ByVal AValue As Double) As Long

Declare Function MT_Help_Encoder_Line_Steps_To_Real Lib "MT_API_Multi.dll" (ByVal APitch As Double,ByVal ALineRatio As Double,ByVal ALineCount As Long,ByVal AValue As Long) As Double

Declare Function MT_Help_Encoder_Circle_Steps_To_Real Lib "MT_API_Multi.dll" (ByVal ACircleRatio As Double,ByVal ALineCount As Long,ByVal AValue As Long) As Double

Declare Function MT_Help_Grating_Line_Real_To_Steps Lib "MT_API_Multi.dll" (ByVal AUnit_um As Double,ByVal AValue As Double) As Long

Declare Function MT_Help_Grating_Circle_Real_To_Steps Lib "MT_API_Multi.dll" (ByVal ALineCount As Long,ByVal AValue As Double) As Long

Declare Function MT_Help_Grating_Line_Steps_To_Real Lib "MT_API_Multi.dll" (ByVal AUnit_um As Double,ByVal AValue As Long) As Double

Declare Function MT_Help_Grating_Circle_Steps_To_Real Lib "MT_API_Multi.dll" (ByVal ALineCount As Long,ByVal AValue As Long) As Double

Declare Function MT_Help_Encoder_Factor Lib "MT_API_Multi.dll" (ByVal AStepAngle As Double,ByVal ADiv As Long,ByVal ALineCount As Long) As Single

Declare Function MT_Help_Grating_Line_Factor Lib "MT_API_Multi.dll" (ByVal AStepAngle As Double,ByVal ADiv As Long,ByVal APitch As Double,ByVal ALineRatio As Double,ByVal AUnit_um As Double) As Single

Declare Function MT_Help_Grating_Circle_Factor Lib "MT_API_Multi.dll" (ByVal AStepAngle As Double,ByVal ADiv As Long,ByVal ACircleRatio As Double,ByVal ALineCount As Long) As Single



